--- a/plugins/geckoboard/views/_detailsEdit.ejs
+++ b/plugins/geckoboard/views/_detailsEdit.ejs
@@ -1,4 +1,4 @@
-<h3 class="pagination-centered"">Geckoboard Options</h3>
+<h4>Geckoboard Options</h4>
 <fieldset>
   <div class="control-group">
     <label class="control-label" for="check[geckoboard_options][availability_url]">Geckoboard Availability Widget URL</label>
