--- a/app/dashboard/views/check_new.ejs
+++ b/app/dashboard/views/check_new.ejs
@@ -2,7 +2,8 @@
 <% if (info.length) { %>
 <div class="alert alert-success"><%= info %></div>
 <% } %>
-<%- partial('_check_details', { check: check, pollerCollection: pollerCollection, pollerDetails: '', route: route }) %>
+<%- partial('_check_details', { check: check, pollerCollection: pollerCollection, pollerDetails: pollerDetails, route: route }) %>
+<div>
 <script>
 jQuery(document).ready(function($) {
   $('.navbar-inner li').eq(1).addClass('active');
